--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,12 @@
+=== 0.0.4 2011-12-13
+
+* divide modules for subclass methods
+* modified return values for void methods
+
+=== 0.0.3 2011-12-12
+
+=== 0.0.2 2011-12-11
+
 === 0.0.1 2011-12-11
 
 * 1 major enhancement:
