--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,17 @@ This container class looks like Struct. And you can use conditions.
 * like Struct API and more
 * pure-ruby
 
+== PLOBLEMS
+
+* usage
+* documentation
+
+== PLAN
+
+* add Subclass macro:
+    safe_level:
+      change check level for accessor name
+
 == SYNOPSIS
 
 * setup
