--- a/README.ja.rdoc
+++ b/README.ja.rdoc
@@ -8,17 +8,16 @@
 
 Strict Struct の略です。そのまま StrictStruct でも使えます。
 
-メソッド呼び出しが効いてメンバ名チェックのかかるStructは、Hashより気持ち良く感じます。
-でもStructを使う場面って、参照先にもチェックをかけたいと思う事が多くありませんか？
+メンバ名チェックのかかるStructは、安心感という意味ではHashよりも好ましい事があるかと思います。
+でもそうやってStructを使うぐらいなわけだから、名前だけじゃなく参照先にもある程度の代入条件をかけたいと思う事が多くありませんか？
 
-RubyのStructを愛用しているんだけど、こういった部分をなんとかしたいと感じている方へお勧めします。
+RubyのStructを愛しつつも、こういった部分をなんとかしたいと感じている方へお勧めします。
 
-1. ノーガードで参照の付けはずしが出来るのはおっかない
+1. ノーガードで参照を付けられるのがおっかないときもある
 2. かといって、型チェックしか出来ないようじゃ動的言語のメリットが死ぬんではなかろうか
 3. どうせなら、チェックだけじゃなくキャストなりもやらせた上で格納したいときってあるよね
-4. このメンバの標準値は明らかにnilじゃない
-5. Structは好きだけど、この辺クリアしようとしたら上書きばかりすることになって使いづらい
-z. 毎回毎回同じような構造体クラス書くのは面倒だ
+4. とはいえ毎回毎回同じような構造体クラス書くのは面倒だし、長ったらしい
+5. メンバによっては標準値も定義したい
 
 == FEATURES
 
@@ -27,12 +26,8 @@ z. 毎回毎回同じような構造体クラス書くのは面倒だ
 * Proc(lambda)やMethod等 を使うことで、さらに柔軟なチェックが可能です
 * 参照前に、ちょっとした処理を加える事も可能です
 * Structの心地よい操作感を残したまま機能追加をしています。
-* 既存クラスやメソッドの上書き等はしない、控えめな名前空間
+* 既存クラスやメソッドの上書き等（を勝手には）しない、控えめな名前空間
 * pure-ruby
-
-== PLAN
-
-* https://github.com/kachick/striuct/wiki/Plan
 
 == SYNOPSIS
 
@@ -63,12 +58,6 @@ z. 毎回毎回同じような構造体クラス書くのは面倒だ
     user.age = 19
     user.name = nil
 
-* 単純な例としてはこんな感じですが、更に細かいチェッカが必要であれば関数的オブジェクトを使って下さい。
-  この時Proc(lambda)を自身のコンテキストで評価する為、Methodより使うシーンが多いと思います。
-    class GameDB < Striuct.new
-      member :monsters, ->monsters{[monsters - characters].empty?}
-      member :characters, Array
-    end
  
 * リンク貼る時どれだけ注意しても、その後参照先のオブジェクトがぶっ壊れる可能性は残りますよね。
   これは致し方無いと思うので、チェックだけでも簡単にできるようにしています。
@@ -76,14 +65,47 @@ z. 毎回毎回同じような構造体クラス書くのは面倒だ
     user.address.clear
     user.strict? #=> false
 
-* 更に細かい用途ですが、memberマクロへブロックを渡しておくと、チェック後一処理を加えた値を参照するように出来ます。
+* 単純な例としてはこんな感じですが、更に細かいチェッカが必要であれば関数オブジェクトを使って下さい。
+  この時Proc(lambda)を構造体インスタンスのコンテキストで評価する為、他のメンバと連携したチェックも可能です。
+    module Game
+      class Character
+      end
+
+      class DB < Striuct.new
+        member :monsters, ->monsters{(monsters - characters).empty?}
+        member :characters, ->characters{characters.all?{|c|c.kind_of? Character}}
+      end
+      
+      monster = Character.new
+      db = DB.new
+      
+      begin
+        db.characters = [1, 2]
+      rescue
+        debug $!
+      end
+      
+      db.characters = [monster, Character.new]
+      debug db
+      
+      begin
+        db.monsters = [:dummy]
+      rescue
+        debug $!
+      end
+      
+      db.monsters = [monster]
+      debug db
+    end
+
+* 更に細かい用途ですが、memberマクロへブロックを渡しておくと、チェック後一処理加えた値を代入可能です。
     class User2 < Striuct.new
       # 数字っぽければIntegerへ変換してから
       member :age, /\A\d+\z/, Numeric do |v|
         Integer v
       end
       
-      # Stringっぽさが強い時だけ、Symbolに変換。
+      # Stringっぽさが強い時だけ、Symbolに変換した上で代入。
       member :name, ->v{v.respond_to? :to_str} do |v|
         v.to_str.to_sym
       end
@@ -93,6 +115,8 @@ z. 毎回毎回同じような構造体クラス書くのは面倒だ
     user2.age = 9 #=> 9(Fixnum)
     user2.age = 10.1 #=> 10(Fixnum)
     user2.age = '10' #=> 10(Fixnum)
+    
+    user2.name = 's' #=> :10(Symbol)
 
 * Structだと標準値は全て nil になってしまいますが、これもクラスマクロで定義できるようにしました。
     class User3 < Striuct.new
@@ -116,11 +140,15 @@ z. 毎回毎回同じような構造体クラス書くのは面倒だ
     Sth1 = Striuct.new :id, :last_name, :family_name, :address, :age
 
     Sth2 = Striuct.new do
-      def m
+      def my_special_method
       end
-    end  
+    end
+    
+    Sth2.new.respond_to?(:my_special_method) #=> true
 
-*  混在利用させたい向きとかに、Structにも同じようなインターフェイスを用意できます。
+* ここの例だと返り値や例外状況が見づらいと思うので、同梱の example.rb を動かしてみてください
+
+* 混在利用させたい向きとかに、Structにも同じようなインターフェイスを用意できます。
   逆に言うと、これを使わない限りは名前空間をあんまし汚しません。
     require 'striuct/import'
 
