--- a/README.rdoc
+++ b/README.rdoc
@@ -11,7 +11,7 @@ Handy and safty than Ruby's Standard Struct.
 
 == FEATURES
 * Provide automated checking for your setters.
-  When you link a object, Striuct checks "They are valid object?".
+  When you link a object, Striuct checks "They are valid objects?".
   These checkers are not only Type Checker. They judge under your expressions.
 * After check, you can add one-step before link a object (call "flavor" at here).
 * You will be set default-value, and we have different meanings between nil and default-value.
@@ -23,7 +23,7 @@ Handy and safty than Ruby's Standard Struct.
 * setup
     require 'striuct'
 
-* Macro "member" provides one of from Struct+ interfaces.
+* Macro "member" provides one of Struct+ interface.
   It checks under conditions when change to link other.
     class User < Striuct.new
       member :id, Integer
@@ -58,23 +58,17 @@ Handy and safty than Ruby's Standard Struct.
       monster = Character.new
       db = DB.new
       
-      begin
-        db.characters = [1, 2]
-      rescue
-        debug $!
-      end
+      # fail
+      db.characters = [1, 2]
       
+      # pass
       db.characters = [monster, Character.new]
-      debug db
       
-      begin
-        db.monsters = [:dummy]
-      rescue
-        debug $!
-      end
+      # fail
+      db.monsters = [:dummy]
       
+      # pass
       db.monsters = [monster]
-      debug db
     end
 
 * with flavor for type cast
