--- a/README.rdoc
+++ b/README.rdoc
@@ -11,8 +11,9 @@ Handy and safty than Ruby's Standard Struct.
 
 == FEATURES
 * Provides automated checking for your setters.
-  When you link a object, Striuct checks "They are valid objects?".
+* When you link a object, Striuct checks "They are valid objects?".
   These checkers are not only Type Checker. They judge under your expressions.
+* when use "inference", member will be fixed first passed object's class
 * After check, you can add one-step before link a object (call "flavor" at here).
 * You will be set default-value, and we have different meanings between nil and default-value.
 * without undesirable naming for conflict, no-identifier, and more cases
